# ExifStat

./: .gitignore  CMakeLists.txt  Makefile  README.md  clean_cmake.sh
cpp_exiftool/src/: ExifTool.cpp  ExifToolPipe.cpp  TagInfo.cpp
src/: FileManager.cpp  FileManager.h  main.cpp
